# gol_engines

./: .gitignore  Cargo.toml  LICENSE  README.md  benchmark.sh  notes.txt  plot.py
benches/: atomic_operations.rs  channel_throughput.rs  measure_duration.rs
res/: conway.mc  sparked.mc
src/: lib.rs  pattern.rs  topology.rs  traits.rs
src/quadtree_async/: blank.rs  hashlife.rs  hashlife_executor.rs  memory.rs  mod.rs  node.rs  statistics.rs  streamlife.rs  streamlife_cache.rs
src/quadtree_small/: chunk_vec.rs  hashlife.rs  memory.rs  mod.rs  node.rs  streamlife.rs
src/quadtree_sync/: blank.rs  hashlife.rs  memory.rs  mod.rs  node.rs  streamlife.rs  streamlife_cache.rs
src/simd/: engine.rs  mod.rs
tests/: test_engines.rs
