[package]
name = "gol_engines"
version = "0.1.0"
edition = "2021"
description = "Tools for Conway's Game of Life"
repository = "https://github.com/das67333/gol_engines"
readme = "README.md"
authors = ["Suleiman Kazimov <solomon67334@gmail.com>"]
license = "GPL-3.0"
keywords = ["game-of-life", "simd", "hashlife", "streamlife"]
categories = ["algorithms", "concurrency", "simulation"]

[features]
cli_deps = ["clap", "num-format"]

[[bin]]
name = "gol_engines_cli"
required-features = ["cli_deps"]

[[bin]]
name = "bench_0e0p"

[[bin]]
name = "bench_dev"

[dependencies]
ahash = "0.8"
anyhow = "1.0"
flate2 = "1.1"
num-bigint = "0.4"
rand = "0.9"
rand_chacha = "0.9"
tokio = { version = "1.44", features = ["rt-multi-thread", "sync"] }

clap = { version = "4.5", features = ["derive"], optional = true }
num-format = {version = "0.4", features = [
    "with-num-bigint",
], optional = true }

[dev-dependencies]
serial_test = "3.2"

[profile.release]
debug = true
