[package]
name = "gol_engines"
version = "0.2.1"
edition = "2021"
description = "Tools for Conway's Game of Life"
repository = "https://github.com/das67333/gol_engines"
readme = "README.md"
authors = ["Suleiman Kazimov <solomon67334@gmail.com>"]
license = "GPL-3.0"
keywords = ["game-of-life", "simd", "hashlife", "streamlife"]
categories = ["algorithms", "concurrency", "simulation"]
include = ["src/**/*.rs", "Cargo.toml", "README.md", "LICENSE"]

[features]
cli_deps = ["chrono", "clap", "num-format"]

[[bin]]
name = "gol_engines_cli"
required-features = ["cli_deps"]

[[bin]]
name = "bench_0e0p"

[[bin]]
name = "bench_dev"

[dependencies]
ahash = "0.8"
anyhow = "1.0"
crossbeam-deque = "0.8"
flate2 = "1.1"
mimalloc = "0.1"
num-bigint = "0.4"
parking_lot = "0.12"
rand = "0.9"
rand_chacha = "0.9"
smallvec = "1.15"
tokio = { version = "1.44", features = ["rt-multi-thread", "sync"] }

chrono = { version = "0.4", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }
num-format = { version = "0.4", features = [
    "with-num-bigint",
], optional = true }

[dev-dependencies]
criterion = "0.7"
crossbeam-channel = "0.5"
libc = "0.2"
serial_test = "3.2"

[[bench]]
name = "channel_throughput"
harness = false

[[bench]]
name = "measure_duration"
harness = false
